# QuickVar

./: .gitignore  LICENSE  README.md  pyproject.toml
quickvar/: __init__.py  align.py  cli.py  install.py  reference.py  settings.py  sra.py  utils.py
test_data/amplicon/: variants.tsv
test_results/glabrata_amplicon/: glabrata_amplicon.sorted.bam  glabrata_amplicon.sorted.bam.bai  glabrata_amplicon.vcf  glabrata_amplicon.vcf.gz.csi  glabrata_amplicon_amplicon.tsv  glabrata_amplicon_amplicon_indels.tsv
